# phantom_guard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROJECT_FOUNDATION.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/architect/: SKILL.md
.claude/skills/competitive-watch/: SKILL.md
.claude/skills/hostile-review/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/master/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/roadmap/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/validate-technical/: SKILL.md
.fortress/: FORTRESS.md
.fortress/gates/: GATE_0_PROBLEM.md  GATE_1_ARCHITECTURE.md  GATE_2_SPECIFICATION.md  GATE_3_TEST_DESIGN.md  GATE_4_PLANNING.md
.fortress/reports/validation/: HOSTILE_REVIEW_GATE1_2025-12-24.md  HOSTILE_REVIEW_GATE2_2025-12-24.md  HOSTILE_REVIEW_GATES_3_4_2025-12-24.md  HOSTILE_REVIEW_PLANNING_UPDATE_2025-12-24.md  HOSTILE_REVIEW_WEEK9_PLANNING_2026-01-06.md
.github/workflows/: ci.yml  deploy-showcase.yml
action/: action.yml  jest.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
action/reports/: HOSTILE_REVIEW_WEEK8.md
action/src/: extract.ts  files.ts  index.ts  validate.ts
action/tests/: comment.test.ts  exit.test.ts  extract.test.ts  files.test.ts  index.test.ts  sarif.test.ts  validate.test.ts
docs/: API.md  ARCHITECTURE.md  CI_CD.md  ROADMAP.md  ROADMAP_AUDIT.md  USAGE.md  WEEKLY_EXECUTION_PLAN.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_V0.2.0.md
docs/design/: BRANDING_GUIDE.md
docs/frameworks/: FORTRESS_2.0_FRAMEWORK.md
docs/performance/: BASELINE_MEASUREMENTS.md
docs/planning/: HOSTILE_REVIEW_V0.3.0.md  ROADMAP.md  ROADMAP_V0.2.0.md  ROADMAP_V0.3.0.md  WEEK8_GITHUB_ACTION_PLAN.md  WEEK9_VSCODE_EXTENSION_PLAN.md
docs/planning/week1/: DAY_1.md  DAY_2.md  DAY_3.md  DAY_4.md  DAY_5.md
docs/planning/week2/: DAY_1.md  DAY_2.md  DAY_3.md  DAY_4.md  DAY_5.md
docs/planning/week_3/: DAY_1.md  DAY_2.md  DAY_3.md  DAY_4.md  DAY_5.md  HOSTILE_REVIEW_WEEK3_PLANNING.md
docs/planning/week_4/: DAY_1.md  DAY_2.md  DAY_3.md  DAY_4.md  DAY_5.md  DAY_6.md  HOSTILE_REVIEW_WEEK4_PLANNING.md  WEEK_4_OVERVIEW.md
docs/planning/week_5/: DAY_1.md  DAY_2.md  DAY_3.md  DAY_4.md  DAY_5.md  DAY_6.md  HOSTILE_REVIEW_REPORT.md  WEEK_5_OVERVIEW.md
docs/planning/week_9/: DAY_0_PREP.md  DAY_1.md  DAY_2.md  DAY_3.md  DAY_4.md  DAY_5.md  DAY_6.md
docs/research/: TECHNICAL_VALIDATION.md  V0.2.0_MARKET_RESEARCH.md
docs/showcase/: SHOWCASE_ARCHITECTURE.md
docs/specification/: SPECIFICATION.md  SPECIFICATION_V0.2.0.md
docs/testing/: TEST_MATRIX.md  TEST_MATRIX_V0.2.0.md
mcp/: pyproject.toml
mcp/src/phantom_guard_mcp/: __init__.py  __main__.py  server.py
mcp/src/phantom_guard_mcp/data/: hallucination_db.py
mcp/src/phantom_guard_mcp/evaluation/: stage1.py
mcp/src/phantom_guard_mcp/tools/: _validation.py  check_package.py  check_packages.py  check_typosquat.py  is_hallucinated.py
mcp/tests/: conftest.py  test_server.py
mcp/tests/test_evaluation/: test_stage1.py
mcp/tests/test_tools/: test_check_package.py  test_check_packages.py  test_check_typosquat.py  test_is_hallucinated.py
phantom-guard-pip/: .gitignore  README.md  pyproject.toml
phantom-guard-pip/src/phantom_pip/: __init__.py  __main__.py  cli.py  config.py  confirm.py  delegate.py  errors.py  extract.py  lists.py  parser.py
phantom-guard-pip/tests/: conftest.py  test_cli.py  test_config.py  test_confirm.py  test_delegate.py  test_extract.py  test_integration.py  test_lists.py  test_main.py  test_parser.py
research-output/: COMPETITIVE_SCAN.md
scripts/: refresh_popular_packages.py
showcase/: HOSTILE_REVIEW_DAY1.md  HOSTILE_REVIEW_DAY2.md  HOSTILE_REVIEW_DAY2_FINAL.md  index.html  package-lock.json  package.json  vite.config.js
showcase/src/sections/: footer.js  integration.js
showcase/src/styles/: features.css  integration.css  performance.css  reset.css  tokens.css
src/phantom_guard/: __init__.py
src/phantom_guard/cache/: __init__.py  cache.py  memory.py  sqlite.py
src/phantom_guard/cli/: __init__.py  branding.py  formatters.py  main.py  output.py  parsers.py
src/phantom_guard/core/: __init__.py  batch.py  detector.py  patterns.py  scorer.py  types.py  typosquat.py
src/phantom_guard/data/: popular_packages.py
src/phantom_guard/registry/: __init__.py  base.py  cached.py  crates.py  npm.py  pypi.py  retry.py
tests/: __init__.py  conftest.py  test_critical_paths.py
tests/benchmarks/: __init__.py  bench_cache.py  bench_detector.py  bench_patterns.py  bench_scorer.py  conftest.py  test_cli_performance.py  test_memory_profile.py
tests/e2e/: test_cli_workflows.py
tests/integration/: test_cache_integration.py  test_cli_integration.py  test_crates_live.py  test_npm_live.py  test_pypi_live.py
tests/property/: test_scorer_props.py  test_typosquat_props.py
tests/unit/: test_batch.py  test_cache.py  test_cached_registry.py  test_cli.py  test_core_types.py  test_crates.py  test_detector.py  test_formatters.py  test_npm.py  test_output.py  test_parsers.py  test_patterns.py  test_patterns_validate.py  test_pypi.py  test_retry.py  test_scorer.py  test_signals.py  test_signals_combination.py  test_signals_namespace.py  test_typosquat.py
vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
vscode/reports/: HOSTILE_REVIEW_WEEK9_FINAL.md  HOSTILE_REVIEW_WEEK9_POST_FIX.md
vscode/src/: actions.ts  commands.ts  diagnostics.ts  errors.ts  extension.ts  hover.ts
vscode/tests/: actions.test.ts  commands.test.ts  config.test.ts  core.test.ts  diagnostics.test.ts  extension.test.ts  hover.test.ts  statusbar.test.ts
vscode/tests/__mocks__/: vscode.ts
