[project]
name = "phantom-guard"
version = "0.0.1"
description = "Detect AI-hallucinated package attacks (slopsquatting) before they compromise your code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "security",
    "supply-chain",
    "slopsquatting",
    "ai",
    "hallucination",
    "dependency",
    "package",
    "pypi",
    "npm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pre-commit>=3.4.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
phantom-guard = "phantom_guard.cli.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/phantom-guard"
Documentation = "https://github.com/yourusername/phantom-guard#readme"
Repository = "https://github.com/yourusername/phantom-guard"
Issues = "https://github.com/yourusername/phantom-guard/issues"
Changelog = "https://github.com/yourusername/phantom-guard/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phantom_guard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/phantom_guard"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 80

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "S101",   # Use of assert (ok in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "ARG002"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert is fine
